<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.RegistrationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <Button
            android:id="@+id/btnProfilePic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_profile_pic"
            android:text="select photo"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.20999998" />


        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_box"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="5dp"
            android:hint="Name"
            android:inputType="text"
            android:maxLines="1"
            android:padding="6dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/btnProfilePic"
            app:layout_constraintStart_toStartOf="@+id/btnProfilePic"
            app:layout_constraintTop_toBottomOf="@+id/btnProfilePic" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_box"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="6dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/etName"
            app:layout_constraintStart_toStartOf="@+id/etName"
            app:layout_constraintTop_toBottomOf="@+id/etName" />

        <EditText
            android:id="@+id/etRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_box"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="6dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <EditText
            android:id="@+id/etRegisterConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_box"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="5dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="6dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/etRegisterPassword"
            app:layout_constraintStart_toStartOf="@+id/etRegisterPassword"
            app:layout_constraintTop_toBottomOf="@+id/etRegisterPassword" />

        <Button
            android:id="@+id/btRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_layout"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/etRegisterConfirmPassword"
            app:layout_constraintStart_toStartOf="@+id/etRegisterConfirmPassword"
            app:layout_constraintTop_toBottomOf="@+id/etRegisterConfirmPassword" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfilePic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:civ_border_width="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/btnProfilePic"
            app:layout_constraintEnd_toEndOf="@+id/btnProfilePic"
            app:layout_constraintStart_toStartOf="@+id/btnProfilePic"
            app:layout_constraintTop_toTopOf="@+id/btnProfilePic" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>